# throb

./: .appveyor.yml  .gitmodules  .travis.yml  CMakeLists.txt  README.md
cmake/: JUCE.cmake
resources/: led-alphanumeric.psd  throb-restyle.psd  throb.psd
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ThrobGUI.cpp  ThrobGUI.h
src/resources/: Led.cpp  ThrobGUI.cpp
src/ui/: Led.cpp  Led.h
support/: AppConfig.h.in  project-config.h.in
support/osx/: Info-AU.plist.in
support/travis/: deploy-bintray.json.in
